--- a/templates/jobs/job_form.html
+++ b/templates/jobs/job_form.html
@@ -103,7 +103,7 @@
     {# Submit Button #}
     <div class="pt-4">
         <button type="submit"
-                class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded transition duration-300">
+                class="w-full bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-3 px-4 rounded transition duration-300">
           {% if object %}Actualizează Anunțul{% else %}Postează Anunțul{% endif %} {# Change button text if editing #}
         </button>
     </div>
