--- a/payments/templates/payments/payment_cancel.html
+++ b/payments/templates/payments/payment_cancel.html
@@ -18,7 +18,7 @@
 
     <p class="text-lg text-gray-700 mb-6">Your payment process was cancelled. You have not been charged.</p>
 
-    <a href="{% url 'payments:plan_list' %}" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded transition duration-300 mr-4">View Plans</a>
+    <a href="{% url 'payments:plan_list' %}" class="inline-block bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded transition duration-300 mr-4">View Plans</a>
     <a href="{% url 'accounts:company_dashboard' %}" class="inline-block bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded transition duration-300">Go to Dashboard</a>
 </div>
 {% endblock %}
