--- a/payments/templates/payments/payment_success.html
+++ b/payments/templates/payments/payment_success.html
@@ -18,6 +18,6 @@
 
     <p class="text-lg text-gray-700 mb-6">Thank you for your subscription. Your plan has been activated.</p>
 
-    <a href="{% url 'accounts:company_dashboard' %}" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded transition duration-300">Go to Dashboard</a>
+    <a href="{% url 'accounts:company_dashboard' %}" class="inline-block bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded transition duration-300">Go to Dashboard</a>
 </div>
 {% endblock %}
