--- a/payments/templates/payments/plans.html
+++ b/payments/templates/payments/plans.html
@@ -114,7 +114,7 @@
                  {% if plan.price == 0 %}
                      {# Show free plan signup only if user is not logged in OR if they are logged in but are a job seeker #}
                      {% if not user.is_authenticated or user.user_type == 'job_seeker' %}
-                         <a href="{% url 'accounts:company_signup' %}" class="block w-full bg-white hover:bg-gray-100 text-indigo-600 border border-indigo-600 font-bold py-2 px-4 rounded text-center transition duration-300">
+                         <a href="{% url 'accounts:company_signup' %}" class="block w-full bg-white hover:bg-gray-100 text-emerald-600 border border-emerald-600 font-bold py-2 px-4 rounded text-center transition duration-300">
                              Înregistrează-te acum
                          </a>
                      {% elif user.is_authenticated and user.user_type == 'company' %}
@@ -126,7 +126,7 @@
                       {% endif %}
                   {% else %}
                       {# Buton dezactivat pentru planurile plătite #}
-                      <button disabled class="block w-full bg-indigo-600 text-white font-bold py-2 px-4 rounded text-center opacity-50 cursor-not-allowed">
+                      <button disabled class="block w-full bg-emerald-600 text-white font-bold py-2 px-4 rounded text-center opacity-50 cursor-not-allowed">
                           Alege acest plan
                       </button>
                  {% endif %}
