--- a/templates/accounts/profile_edit_form.html
+++ b/templates/accounts/profile_edit_form.html
@@ -50,7 +50,7 @@
             Anulează
         </a>
         <button type="submit"
-                class="inline-flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                class="inline-flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-emerald-600 hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500">
           Salvează Modificările
         </button>
     </div>
@@ -71,7 +71,7 @@
         input.classList.add('mt-1', 'block', 'w-full', 'text-sm', 'text-gray-500',
           'file:mr-4', 'file:py-2', 'file:px-4',
           'file:rounded-md', 'file:border-0', 'file:text-sm', 'file:font-semibold',
-          'file:bg-indigo-50', 'file:text-indigo-700',
+          'file:bg-emerald-50', 'file:text-emerald-700',
           'hover:file:bg-indigo-100'
         );
      });
