--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -42,7 +42,7 @@
             Anulează
         </a>
         <button type="submit"
-                class="inline-flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                class="inline-flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-emerald-600 hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500">
           Schimbă Parola
         </button>
     </div>
