--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -37,6 +37,10 @@
                     </p>
                 </section>
 
+                <section class="my-12">
+                    <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=2069&auto=format&fit=crop" alt="Happy professional" class="rounded-lg shadow-2xl relative transition-transform duration-500 ease-in-out hover:scale-105 mx-auto max-w-lg w-full">
+                </section>
+
                 <!-- Mission Section -->
                 <section class="mb-12">
                     <h2 class="text-2xl font-semibold text-gray-800 mb-6">Misiunea noastră</h2>
