--- a/templates/registration/account_activation_email.html
+++ b/templates/registration/account_activation_email.html
@@ -1,12 +1,23 @@
 {% autoescape off %}
-Hi {{ user.username }},
+Bună ziua, {{ user.username }},
 
-Please click on the link below to confirm your registration for JoburiExpress:
+Vă mulțumim pentru înregistrarea pe platforma JoburiExpress!
 
+Pentru a vă activa contul, vă rugăm să accesați linkul de mai jos:
+
+<a href="{{ protocol }}://{{ domain }}{% url 'accounts:activate' uidb64=uid token=token %}" style="color: #10b981; text-decoration: none;">Activează contul</a>
+
+Dacă linkul de mai sus nu funcționează, vă rugăm să copiați și să inserați următoarea adresă URL în browserul dumneavoastră:
 {{ protocol }}://{{ domain }}{% url 'accounts:activate' uidb64=uid token=token %}
 
-If clicking the link above doesn't work, please copy and paste the URL into a new browser window instead.
+{% if user.user_type == 'job_seeker' %}
+Sunteți la un pas de a explora noi oportunități de carieră. După activare, veți putea să vă completați profilul, să căutați joburi și să aplicați la cele care vi se potrivesc.
+{% elif user.user_type == 'company' %}
+Sunteți la un pas de a găsi candidatul ideal. După activare, veți putea posta anunțuri de angajare și gestiona aplicațiile primite.
+{% endif %}
 
-Sincerely,
-The JoburiExpress Team
+Vă dorim mult succes!
+
+Cu stimă,
+Echipa JoburiExpress
 {% endautoescape %}
